My account finshing up

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bari Foods - Authentic Rajasthani Snacks</title>
   <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/root.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
@@ -31,8 +32,8 @@
     </nav>
 
     <div class="icons">
-      <i class="fas fa-shopping-cart cart-icon"></i>
-      <i class="fas fa-user-circle user-icon"></i>
+      <a href=""><i class="fas fa-shopping-cart cart-icon"></i></a>
+      <a href="../templates/profile.html"><i class="fas fa-user-circle user-icon"></i></a>
     </div>
   </header>
 
