--- a/templates/index.html
+++ b/templates/index.html
@@ -227,9 +227,9 @@
         <h2>Ready to Experience Royal Flavors?</h2>
         <p>Join thousands of satisfied customers who trust Bari Foods for authentic Rajasthani snacks</p>
         <div class="cta-buttons">
-          <a href="#popular" class="btn-primary large">
-            <i class="fas fa-shopping-cart"></i>
-            Order Now
+          <a href="mailto:barifoods.in@gmail.com" class="btn-primary large">
+            <i class="fa-solid fa-envelope"></i>
+            Mail Us
           </a>
           <a href="tel:+919582489966" class="btn-outline large">
             <i class="fas fa-phone"></i>
