cart and CO update

--- a/templates/products.html
+++ b/templates/products.html
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="icons">
-      <i class="fas fa-shopping-cart cart-icon"></i>
+      <a href="cart.html" aria-label="Cart"><i class="fas fa-shopping-cart cart-icon"></i></a>
       <i class="fas fa-user-circle user-icon"></i>
     </div>
   </header>
@@ -182,7 +182,7 @@
     </div>
   </footer>
 
-  <script src="../static/js/products.js" defer></script>
+  <script type="module" src="../static/js/products.js" defer></script>
 </body>
 
 </html>
