--- a/templates/products.html
+++ b/templates/products.html
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="icons">
-      <a href="cart.html" aria-label="Cart"><i class="fas fa-shopping-cart cart-icon"></i></a>
+      <a href="cart.html"><i class="fas fa-shopping-cart cart-icon"></i></a>
       <i class="fas fa-user-circle user-icon"></i>
     </div>
   </header>
