--- a/templates/products.html
+++ b/templates/products.html
@@ -32,7 +32,8 @@
 
     <div class="icons">
       <a href="cart.html"><i class="fas fa-shopping-cart cart-icon"></i></a>
-      <i class="fas fa-user-circle user-icon"></i>
+      <button class="avatar-btn" id="profileBtn" aria-label="Profile"> <span class="avatar"
+        id="profileAvatar" aria-hidden="true"></span> </button>
     </div>
   </header>
 
@@ -183,6 +184,7 @@
   </footer>
 
   <script type="module" src="../static/js/products.js" defer></script>
+  <script src="../static/js/header.js"></script>
 </body>
 
 </html>
