--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,9 +14,9 @@
 
 <body> <!-- Header: logo left, avatar right -->
   <header class="navbar navbar--brand">
-    <div class="logo-container"> <a href="/" class="brand-link" aria-label="Home"> <img class="logo"
+    <div class="logo-container"> <a href="index.html" class="brand-link" aria-label="Home"> <img class="logo"
           src="../assets/img/bari.jpg" alt="BariFoods" /> </a>
-      <h1>BariFoods</h1>
+      <h1>BARI FOODS</h1>
     </div>
     <div class="spacer"></div> <button class="avatar-btn" id="profileBtn" aria-label="Profile"> <span class="avatar"
         id="profileAvatar" aria-hidden="true"></span> </button>
