--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -13,7 +13,7 @@
   <header class="navbar navbar--brand">
     <div class="logo-container"> <a href="/" class="brand-link" aria-label="Home"> <img class="logo"
           src="../assets/img/bari.jpg" alt="BariFoods" /> </a>
-      <h1>BariFoods</h1>
+      <h1>BARI FOODS</h1>
     </div>
     <div class="spacer"></div> <button class="avatar-btn" id="profileBtn" aria-label="Profile"> <span class="avatar"
         id="profileAvatar" aria-hidden="true"></span> </button>
@@ -23,7 +23,6 @@
       <section class="panel">
         <div class="panel-head">
           <h2 class="page-title">Checkout</h2>
-          <div class="slot">⏱ Deliver Tomorrow, 8am–10am</div>
         </div>
         <!-- Delivery info -->
         <details class="block" open>
@@ -81,11 +80,7 @@
             <div class="pay-list" id="payList">
               <label class="radio-item">
                 <input type="radio" name="pay" value="card" />
-                <span>Card</span>
-              </label>
-              <label class="radio-item">
-                <input type="radio" name="pay" value="upi" />
-                <span>UPI</span>
+                <span>RazorPay</span>
               </label>
               <label class="radio-item">
                 <input type="radio" name="pay" value="cod" />
